solve overflow

--- a/css/styles.css
+++ b/css/styles.css
@@ -192,10 +192,31 @@ footer {
         font-size: 1rem;
     }
 
-    .para--text, .profile {
+    .para--text, .info-section {
         margin-top: 20px;
     }
 
+    .share {
+        height: 30px;
+        width: 30px;
+    }
+
+    .tooltip-text {
+        visibility: visible;
+        width: 90vw;
+        left: 25%;
+        bottom: 10%;
+        height: 70px;
+        border-radius: 0 0 10px 10px;
+    }
+
+    .tooltip-text::after {
+        border: none;
+    }
+
+    .inner-content {
+        padding-top: 10px;
+    }
 
     /* Footer */
 
